# pykomodo

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  build.sh  cli.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
assets/: dashboard.mov
chunks/: chunk-0.txt  chunk-1.txt  chunk-2.txt  chunk-3.txt  chunk-4.txt  chunk-5.txt
docs/: api_reference.rst  cli_reference.rst  conf.py  contribution.rst  installation.rst  quickstart.rst  usage.rst
docs/_build/: .buildinfo  api_reference.html  cli_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  searchindex.js  usage.html
docs/_static/: custom.css
include/: dirent_wrapper.h  myheader.h  thread_pool.h  utils.h
komodo.egg-info/: PKG-INFO  SOURCES.txt
myproject.egg-info/: PKG-INFO  SOURCES.txt
pykomodo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: chunking.pxd  cli.py  command_line.py  config.pxd  config_utils.c  config_utils.pyx  core.c  core.pyx  dirent_wrapper.c  enhanced_chunker.py  gitignore.c  gitignore.pyx  multi_dirs_chunker.c  multi_dirs_chunker.py  multi_dirs_chunker.pyx  thread_pool.c  utils.c
src/pykomodo/: command_line.py  config.py  core.py  dashboard.py  enhanced_chunker.py  multi_dirs_chunker.py  pdf_processor.py  pykomodo_config.py  token_chunker.py  tree_generator.py
src/pykomodo.egg-info/: PKG-INFO
tests/: test_parallel_chunker.py  test_pdf_processor.py
tests/data/: TEST.md  test_binary.py  test_chunker.py  test_cli.py  test_core.py  test_enhanced.py  test_extra_features.py  (+10 more)
(+156 files in other folders)
