[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykomodo"
version = "0.0.5"
description = "A Python-based parallel file chunking system for large codebases"
dependencies = ["pathspec"]
readme = "README.md"
long_description_content_type = "text/markdown"
authors = [{ name = "oha" }]

[project.scripts]
komodo = "pykomodo.command_line:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pykomodo*"]

[tool.setuptools]
zip-safe = false