[build-system]
requires = [
    "setuptools>=64 --hash=sha256:actualhash1",
    "wheel --hash=sha256:actualhash2"
]
build-backend = "setuptools.build_meta"

[project]
name = "pykomodo"
version = "0.1.1"
description = "A Python-based parallel file chunking system for large codebases"
dependencies = ["pathspec", 
                "PyMuPDF"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "oha" }]

[project.scripts]
komodo = "pykomodo.command_line:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pykomodo*"]

[tool.setuptools]
zip-safe = false